--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%include ./_include/header_html.ejs%>
 		<h1><%= title %></h1>
 		<p>Welcome to My Home Page</p>
-		<buttton type="button" onclick="$(location).attr('href','/member');">회원등록</buttton>
+		<buttton type="button" onclick="$(location).attr('href','/member');">등록</buttton>
 <%include ./_include/footer_html.ejs%>
