--- a/views/member/join.ejs
+++ b/views/member/join.ejs
@@ -1,7 +1,7 @@
 <%include ../_include/header_html.ejs%>
 		<h1><%= title %></h1>
 		<p>Register as a member </p>
-		<form name="memJoinForm" id="memJoinForm" method="post" action="" onsubmit="return false;">
+		<form name="memJoinForm" id="memJoinForm" method="post" action="/member/join" >
 		<table style="width:400px;">
 			<col style="width:100px;" />
 			<col style="width:*;" />
